# tiff2fits

./: .gitignore  LICENSE  README.md  gitignore  pyproject.toml  tiff2fits.py
tiff2fits/: tiff2fits.py
